# serializer version: 1
# name: test_binary_sensors[binary_sensor.netgear_lm1200_mobile_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Netgear LM1200 Mobile connected',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.netgear_lm1200_mobile_connected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[binary_sensor.netgear_lm1200_roaming]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Netgear LM1200 Roaming',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.netgear_lm1200_roaming',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[binary_sensor.netgear_lm1200_wire_connected]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'connectivity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Netgear LM1200 Wire connected',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.netgear_lm1200_wire_connected',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
